reworked a few things

--- a/pet-adopt-client/src/index.css
+++ b/pet-adopt-client/src/index.css
@@ -2,6 +2,13 @@
     max-width: 300px;
 }
 
+.cat-cards {
+    max-width: 300px;
+}
+
+.exotic-cards {
+    max-width: 300px;
+}
 .individual-shelter {
     padding: 50px;
     border: 1px dotted black;
