--- a/pet-adopt-client/src/index.css
+++ b/pet-adopt-client/src/index.css
@@ -1,18 +1,119 @@
-.dog-cards {
-    max-width: 300px;
+
+.body {
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: rgba(253, 249, 249, 0.651);
+
 }
 
+.link {
+    margin-left: 4rem;
+}
+
+.home {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
+}
+.shelter-info {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    font-size: 1rem;
+    margin-top: 2rem;
+}
+
+.shelter-display-bar {
+    display: flex;
+    flex-direction: column;
+}
+.notes-on {
+    margin-top: 2rem;
+}
+
+.shelter-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 5rem;
+}
+
+.individual-shelter {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 2rem 0;
+    margin: 2rem;
+}
+
+.shelter-animal-display {
+    margin-top: 7rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.shelter-header {
+    margin-bottom: 10rem;
+}
+
+.navbar {
+    opacity: 1;
+}
+
+.dog-cards {
+    max-width: 300px;
+    box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
+    min-height: 35.375rem;
+}
+
+.dog-container {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.cat-container {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.exotic-container {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+}
+
+.shelter-name {
+    margin-bottom: 2rem;
+}
 .cat-cards {
     max-width: 300px;
+    box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
 }
 
 .exotic-cards {
     max-width: 300px;
+    box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
 }
 
 .dog-display-cards {
     max-width: 350px;
 }
+
+.display-titles {
+    padding-top: 0.5rem;
+    padding-bottom: 2.5rem;
+    font-size: 5rem;
+}
+
+.display-containers {
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 2rem 0;
+    margin: 2rem;
+}
+
 
 .cat-display-cards {
     max-width: 350px;
@@ -22,16 +123,106 @@
     max-width: 350px;
 }
 
-.individual-shelter {
-    padding: 50px;
-    border: 1px dotted black;
+.shelter-note {
+    max-width: 50%;
+    margin: 0 auto;
+    font-size: 1.5rem;
 }
 
 .shelter-images {
     height: 550px;
+    box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
 }
+
+.shelter-card-body {
+    font-size: 1.5rem;
+}
+
+.shelter-card-footer {
+    font-size: 1.5rem;
+}
+
+.p-tag {
+    font-size: 1.25rem;
+}
+.display-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.submit-container {
+    margin-top: 7rem;
+}
+
+.card-pic {
+    height: 12.375rem;
+    object-fit: cover;
+
+}
+
+.search-bar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.search {
+    width: 50rem;
+    text-align: center;
+    height: 2rem;
+}
+
 
 .friend-logo {
     padding: 20px;
 }
 
+.input-dog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 2rem;
+}
+
+
+
+.dog-input {
+    width: 25%;
+    margin-bottom: 0.5rem;
+    text-align: center;
+    
+}
+
+.submit-button {
+    margin-top: 2rem;
+}
+
+.one-three {
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+}
+
+.four-six {
+    margin-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    width: 65%;
+}
+
+.dog-input-text {
+    width: 65%;
+    height: 8rem;
+    margin-bottom: 0.5rem;
+    text-align: center;
+    resize: none;
+    
+}
+
+.submit-a-dog {
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 2rem 0;
+    margin: 2rem;
+}
