--- a/pet-adopt-client/src/index.css
+++ b/pet-adopt-client/src/index.css
@@ -67,6 +67,7 @@
     max-width: 300px;
     box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
     min-height: 35.375rem;
+    margin-bottom: 2rem;
 }
 
 .dog-container {
@@ -90,15 +91,20 @@
 .cat-cards {
     max-width: 300px;
     box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
+    min-height: 35.375rem;
+    margin-bottom: 2rem;
 }
 
 .exotic-cards {
     max-width: 300px;
     box-shadow: 0px 10px 18px -5px rgba(0, 0, 0, 0.5);
+    min-height: 35.375rem;
+    margin-bottom: 2rem;
 }
 
 .dog-display-cards {
     max-width: 350px;
+    
 }
 
 .display-titles {
@@ -178,7 +184,7 @@
     padding: 20px;
 }
 
-.input-dog {
+.input-animal {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -187,7 +193,7 @@
 
 
 
-.dog-input {
+.animal-input {
     width: 25%;
     margin-bottom: 0.5rem;
     text-align: center;
@@ -211,7 +217,7 @@
     width: 65%;
 }
 
-.dog-input-text {
+.animal-input-text {
     width: 65%;
     height: 8rem;
     margin-bottom: 0.5rem;
@@ -220,7 +226,7 @@
     
 }
 
-.submit-a-dog {
+.submit-a-animal {
     border: 1px solid red;
     border-radius: 10px;
     padding: 2rem 0;
