--- a/pet-adopt-client/src/index.css
+++ b/pet-adopt-client/src/index.css
@@ -120,6 +120,7 @@
     border-radius: 10px;
     padding: 2rem 0;
     margin: 2rem;
+    background-color: rgba(253, 249, 249, 0.651);
 }
 
 
@@ -233,4 +234,36 @@
     border-radius: 10px;
     padding: 2rem 0;
     margin: 2rem;
+    background-color: rgba(253, 249, 249, 0.651);
+}
+
+.contact-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border: 1px solid red;
+    border-radius: 10px;
+    padding: 2rem 0;
+    margin: 2rem;
+    background-color: rgba(253, 249, 249, 0.651);
+}
+
+.contact-page {
+    padding-top: 10rem;
+}
+
+.contact-header {
+    width: 75%;
+    margin-bottom: 5rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.icon-container {
+    display: flex;
+}
+
+.icon {
+    margin-right: 2.5rem;
 }
